--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*", "src/types/*"]
+      "*": ["node_modules/*", "lib/types/*"],
+      "@/*": ["lib/*"]
     },
     "resolveJsonModule": true
-  },
-  "include": ["lib/**/*"]
+  }
 }
