--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
   },
   "dependencies": {
     "commander": "^8.1.0",
+    "module-alias": "^2.2.2",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
+    "@types/module-alias": "^2.0.1",
     "@types/node": "^16.7.10"
+  },
+  "_moduleAliases": {
+    "@": "./lib"
   }
 }
