--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "dependencies": {
     "commander": "^8.1.0",
+    "inquirer": "^8.1.2",
     "module-alias": "^2.2.2",
     "typescript": "^4.4.2"
   },
   "devDependencies": {
+    "@types/inquirer": "^8.1.1",
     "@types/module-alias": "^2.0.1",
     "@types/node": "^16.7.10"
   },
