--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "easyreq": "./bin/www"
   },
   "dependencies": {
+    "art-template": "^4.13.2",
     "axios": "^0.21.4",
     "commander": "^8.1.0",
     "inquirer": "^8.1.2",
