--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "scripts": {
     "clean": "rimraf dist/",
     "copy-files": "copyfiles -u 1 lib/templates/* dist/lib/",
-    "build": "npm run clean && tsc",
-    "build:watch": "npm run clean && tsc --watch",
-    "postbuild": "npm run copy-files",
-    "postbuild:watch": "npm run copy-files"
+    "prebuild": "npm run clean && npm run copy-files",
+    "build": "tsc",
+    "prebuild:watch": "npm run clean && npm run copy-files",
+    "build:watch": "tsc --watch"
   },
   "bin": {
     "easyreq": "./bin/www"
