--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "outDir": "dist",
     "baseUrl": ".",
     "paths": {
-      "*": ["node_modules/*", "lib/types/*"],
+      "*": ["node_modules/*", "lib/typings/*"],
       "@/*": ["lib/*"]
     },
     "resolveJsonModule": true
